src/test/deca/syntax/valid/Return.deca
//Test return dans main et classe

class Thing {

    int i;
    
    int getI(){
        return i;
    }
}
{
    int i = 0;
    return i;
}
