src/test/deca/syntax/invalid/ClassMainImbrique.deca
//Test main à l'intérieur d'une classe

class Thing {
    
    protected int i = 0;
    
    int getI(){
        return i;
    }

    {
        print("Je suis un main, et je suis dans la class Thing");
    }

}

